--- a/appsettings.json
+++ b/appsettings.json
@@ -1,10 +1,20 @@
 {
-    "ScraperSettings": {
-      "OneFodiscountUrl": "https://www.1fodiscount.com/f7-carte-graphique/w33-Nvidia%20Geforce%20RTX%205090/w33-AMD%20Radeon%20RX%209070%20XT/en-stock/#filter/",
-      "GrosbillUrl": "https://www.grosbill.com/2-carte_graphique-cat-informatique?crits=8737%3a8717"
+  "ScraperSettings": {
+    "OneFodiscount": {
+      "SiteName": "1fodiscount",
+      "Url": "https://www.1fodiscount.com/f7-carte-graphique/w33-Nvidia%20Geforce%20RTX%205090/w33-AMD%20Radeon%20RX%209070%20XT/en-stock/#filter/"
     },
-    "Logging": {
-      "LogLevel": "Information"
+    "Grosbill": {
+      "SiteName": "grosbill",
+      "Url": "https://www.grosbill.com/2-carte_graphique-cat-informatique?crits=8737%3a8717&stock=1"
+    },
+    "LDLC": {
+      "SiteName": "ldlc",
+      "Url": "https://www.ldlc.com/informatique/pieces-informatique/carte-graphique-interne/c4684/+fdi-1+fv121-126518,126520.html"
     }
-  }
+  },
   
+  "Logging": {
+    "LogLevel": "Information"
+    }
+}
