added Infomax and pcomponentes

--- a/appsettings.json
+++ b/appsettings.json
@@ -11,10 +11,18 @@
     "LDLC": {
       "SiteName": "ldlc",
       "Url": "https://www.ldlc.com/informatique/pieces-informatique/carte-graphique-interne/c4684/+fdi-1+fv121-126518,126520.html"
-    }
-  },
-  
+    },
+    "PCComponentes": {
+      "SiteName": "pccomponentes",
+      "Url": "https://www.pccomponentes.fr/cartes-graphiques/amd-radeon-rx-9070-xt/geforce-rtx-5090"
+    },
+    "InfomaxParis": {
+      "SiteName": "infomaxparis",
+      "Url": "https://infomaxparis.com/fr/123-carte-graphique-pc-gamer?q=Disponibilit%C3%A9-En+stock/Chipset+graphique-AMD+Radeon+RX+9070+XT-NVIDIA+GeForce+RTX+5090"
+    },
+
   "Logging": {
     "LogLevel": "Information"
     }
+  }
 }
